--- a/views/userViews/forgotPasswordPage2.hbs
+++ b/views/userViews/forgotPasswordPage2.hbs
@@ -696,16 +696,30 @@
               </div>
               <div class="form-group">
                 <label>OTP</label>
-                <input title="Invalid OTP" type="tel" class="form-control" placeholder="Enter OTP"
-                  required data-rule-equalTo="#OTP">
+                <input title="Invalid OTP" type="tel" class="form-control" placeholder="Enter OTP" required
+                  data-rule-equalTo="#OTP">
               </div>
               <div class="form-group">
-                {{!-- <label>Time Left: </label> --}}
+                <label>Time Left: </label> <span>
+                  <h4 id="timer"></h4>Seconds left
+                </span>
               </div>
               <button type="submit" class="btn btn-primary"><i class="fa fa-user"></i>Confirm OTP</button>
             </form>
           </div>
         </div>
+        <script>
+          let a = 60
+          h = Document.getElementById('timer')
+          let otpTimer = setInterval((){
+            h.innerText = a--
+            if (a === 0) {
+              clearInterval(otpTimer);
+            }
+          }, 1000)
+          if (a == 0)
+            clearInterval(otpTimer)
+        </script>
         <!--/row end-->
 
       </div>
