--- a/views/userViews/productDetails.hbs
+++ b/views/userViews/productDetails.hbs
@@ -679,7 +679,7 @@
                         <form action="/addToCart/{{currentProduct._id}}" method="POST">
                             <div class="col-lg-4 col-sm-4 col-xs-4">
                                 <div class="filterBox">
-                                    <select class="form-control">
+                                    <select class="form-control" name="productQuantity">
                                         <option value="strawberries" selected>Quantity</option>
                                         <option value="mango">1</option>
                                         <option value="bananas">2</option>
