--- a/views/adminViews/productManagement.hbs
+++ b/views/adminViews/productManagement.hbs
@@ -81,26 +81,33 @@
                             </label>
                         </div>
                         <div class="input-group mb-3">
-                            <img id="preview" src="" style="width: 100px; height: 100px; display:none" alt="Img" >
+                            <img id="preview1" src="" style="width: 100px; height: 100px; display:none" alt="Img">
                             <div class="input-group mb-3">
-                            <input id="productImage1" name="productImage1" type="file" class="form-control" placeholder="Product Image1" onchange="displayImage()" required>
+                                <input id="productImage1" name="productImage1" type="file" class="form-control"
+                                    placeholder="Product Image1" onchange="displayImage1()" required>
                             </div>
                         </div>
                         <div class="input-group mb-3">
-                             <img id="preview2" src="" style="width: 100px; height: 100px; display:none" alt="Img" >
-                             <div class="input-group mb-3">
-                            <input name="productImage2" type="file" class="form-control" placeholder="Product Image2" onchange="displayImage()" required>
+                            <img id="preview2" src="" style="width: 100px; height: 100px; display:none" alt="Img">
+                            <div class="input-group mb-3">
+                                <input id="productImage2" name="productImage2" type="file" class="form-control"
+                                    placeholder="Product Image2" onchange="displayImage2()" required>
                             </div>
                         </div>
                         <div class="input-group mb-3">
-                            <input name="productImage3" type="file" class="form-control" placeholder="Product Image3" required>
+                            <img id="preview3" src="" style="width: 100px; height: 100px; display:none" alt="Img">
+                            <div class="input-group mb-3">
+                                <input id="productImage3" name="productImage3" type="file" class="form-control"
+                                    placeholder="Product Image3" onchange="displayImage3()" required>
+                            </div>
                         </div>
                         <div class="input-group mb-3">
-                            <input name="productPrice" type="tel" class="form-control" placeholder="Product Price" required>
+                            <input name="productPrice" type="tel" class="form-control" placeholder="Product Price"
+                                required>
                         </div>
                         <div class="input-group mb-3">
-                            <input name="productQuantity" type="tel" class="form-control"
-                                placeholder="Product Quantity" required>
+                            <input name="productQuantity" type="tel" class="form-control" placeholder="Product Quantity"
+                                required>
                         </div>
                     </div>
                     <div class="modal-footer">
@@ -169,7 +176,8 @@
                         </button>
 
                         </button>
-                        <button type="button" class="btn btn-info" onclick="return confirm('Are you sure you want to delete {{this.categoryName}} product?')">
+                        <button type="button" class="btn btn-info"
+                            onclick="return confirm('Are you sure you want to delete {{this.categoryName}} product?')">
                             <a href="/admin/productManagement/delete/{{this._id}}"><i class="fa fa-trash"
                                     aria-hidden="true"></i></a>
                         </button>
@@ -200,7 +208,7 @@
                                 <span>Select Parent Category</span>
                                 <select name="parentCategory" class="form-select" aria-label="Default select example">
                                     {{#each ../categoryList}}
-                                        <option>  {{this.categoryName}}   </option>
+                                    <option> {{this.categoryName}} </option>
                                     {{/each}}
                                 </select>
 
@@ -210,7 +218,8 @@
                             <img src="/images/productImages/{{this.productImage1}}" alt=""
                                 style="width: 100px; height: 100px">
                             <div class="input-group mb-3">
-                                <input name="productImage1" type="file" class="form-control" value="{{this.productImage1}}">
+                                <input name="productImage1" type="file" class="form-control"
+                                    value="{{this.productImage1}}">
                             </div>
                         </div>
                         <div class="input-group mb-3">
@@ -267,17 +276,38 @@
 
     {{!-- onchange image display --}}
     <script>
-        function displayImage(imgId){
-            const reader= new FileReader()
-            reader.onload =()=>{
-                preview.src=reader.result
+        function displayImage1() {
+            const reader = new FileReader()
+            reader.onload = () => {
+                preview1.src = reader.result
             }
-            const file = document.querySelector("input[type=file]").files[0];
-            if(file){
-                preview.style.display= 'block'
+            const file = document.querySelector("#productImage1").files[0];
+            if (file) {
+                preview1.style.display = 'block'
                 reader.readAsDataURL(file)
             }
-                
+        }
+        function displayImage2() {
+            const reader = new FileReader()
+            reader.onload = () => {
+                preview2.src = reader.result
+            }
+            const file = document.querySelector("#productImage2").files[0];
+            if (file) {
+                preview2.style.display = 'block'
+                reader.readAsDataURL(file)
+            }
+        }
+        function displayImage3() {
+            const reader = new FileReader()
+            reader.onload = () => {
+                preview3.src = reader.result
+            }
+            const file = document.querySelector("#productImage3").files[0];
+            if (file) {
+                preview3.style.display = 'block'
+                reader.readAsDataURL(file)
+            }
         }
     </script>
 
