before week9 review 30thdec

--- a/views/adminViews/adminDashboard.hbs
+++ b/views/adminViews/adminDashboard.hbs
@@ -30,7 +30,7 @@
                             <a class="nav-link" aria-current="page" href="/admin/productManagement">Products</a>
                         </li>     
                         <li class="nav-item fw-bold">
-                            <a class="nav-link" aria-current="page" href="/admin/orders">Orders</a>
+                            <a class="nav-link" aria-current="page" href="/admin/orderManagement">Orders</a>
                         </li>
                         <li class="nav-item fw-bold">
                             <a class="nav-link" aria-current="page" href="/admin/SalesReport">Sales Report</a>
