--- a/views/userViews/forgotPasswordPage2.hbs
+++ b/views/userViews/forgotPasswordPage2.hbs
@@ -175,17 +175,27 @@
           <div class="col-lg-6 col-sm-6 col-xs-6 col-md-6 no-margin no-padding">
             <div class="pull-right">
               <ul class="userMenu">
-                <li>
-                  <a href="/">
-                    <span class="hidden-xs">Welcome
-                      {{currentUser.username}}</span>
-                  </a>
+                <li><a href="/account"><span class="hidden-xs"> My Account</span> <i
+                      class="glyphicon glyphicon-user hide visible-xs "></i></a></li>
+
+
+                <li class="dropdown hasUserMenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                    aria-expanded="false"> <i class="glyphicon glyphicon-log-in hide visible-xs "></i> Hi, {{currentUser.username}} <b
+                      class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="/account"> <i class="fa fa-user"></i> Account</a></li>
+                    <li><a href="account.html"><i class="fa fa fa-cog"></i> Profile</a></li>
+                    <li><a href="my-address.html"><i class="fa fa-map-marker"></i> Addresses</a></li>
+                    <li><a href="order-list.html"><i class="fa  fa-calendar"></i> Orders</a></li>
+                    <li><a href="wishlist.html" title="My wishlists">
+                        <i class="fa fa-heart"></i>
+                        My wishlists
+                      </a></li>
+                    <li class="divider"></li>
+                    <li><form action="/logout" method="POST"><i class="fa  fa-sign-out"></i><button type="submit">Log Out</button></form></li>
+                  </ul>
                 </li>
-                <li>
-                  <a href="/logout">
-                    <span class="hidden-xs">Logout</span>
-                  </a>
-                </li>
+
               </ul>
             </div>
           </div>
@@ -194,12 +204,7 @@
             <div class="pull-right">
               <ul class="userMenu">
                 <li>
-                  <a href="/signupLoginPage"><span class="hidden-xs">
-                      My Account</span>
-                    <i class="glyphicon glyphicon-user hide visible-xs"></i></a>
-                </li>
-                <li>
-                  <a href="/signupLoginPage" data-toggle="modal">
+                  <a href="/signupLoginPage">
                     <span class="hidden-xs">Sign In</span>
                     <i class="glyphicon glyphicon-log-in hide visible-xs"></i>
                   </a>
@@ -625,7 +630,7 @@
 
               <div class="miniCartFooter text-right">
                 <h3 class="text-right subtotal">Subtotal: ₹210</h3>
-                <a class="btn btn-sm btn-danger" href="cart.html">
+                <a class="btn btn-sm btn-danger" href="/cart">
                   <i class="fa fa-shopping-cart"> </i>
                   VIEW CART
                 </a><a class="btn btn-sm btn-primary"> CHECKOUT </a>
@@ -700,7 +705,8 @@
                   data-rule-equalTo="#OTP">
               </div>
               <div class="form-group">
-                <label>Time Left: </label> <span>
+                <label>Time Left: </label> 
+                <span>
                   <h4 id="timer"></h4>Seconds left
                 </span>
               </div>
