--- a/views/userViews/myAddress.hbs
+++ b/views/userViews/myAddress.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from templatecycle.com/tshop/v6/gray/product-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 09 Dec 2023 06:52:06 GMT -->
+<!-- Mirrored from templatecycle.com/tshop/v6/gray/my-address.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 09 Dec 2023 06:55:47 GMT -->
 
 <head>
     <meta charset="utf-8">
@@ -12,19 +12,17 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.html">
     <link rel="shortcut icon" href="assets/ico/favicon.png">
-    <title>TSHOP - Bootstrap E-Commerce Parallax Theme</title>
+    <title>TSHOP - Bootstrap E-Commerce Parallax Theme </title>
     <!-- Bootstrap core CSS -->
     <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="assets/css/style.css" rel="stylesheet">
 
-    <!-- styles needed by smoothproducts.js for product zoom  -->
-    <link rel="stylesheet" href="assets/plugins/smoothproducts-master/css/smoothproducts.css">
-    <link href="assets/plugins/rating/bootstrap-rating.css" rel="stylesheet">
 
-    {{!-- sweetalert --}}
-    
+    <link href="assets/css/ion.checkRadio.html" rel="stylesheet">
+    <link href="assets/css/ion.checkRadio.cloudy.html" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/css/jquery.minimalect.min.css" media="screen" />
 
 
     <!-- Just for debugging purposes. -->
@@ -36,11 +34,13 @@
 
     <!-- include pace script for automatic web page progress bar  -->
 
+
     <script>
         paceOptions = {
             elements: true
         };
     </script>
+
     <script src="assets/js/pace.min.js"></script>
     <!-- add theme styles for this template -->
     <link id="pagestyle" rel="stylesheet" type="text/css" href="assets/css/skin-1.css">
@@ -157,6 +157,8 @@
         </h3>
         <p class="tbtn"> <i class="fa fa-angle-double-left"></i></p>
     </div>
+
+
 
   <!-- Fixed navbar start -->
   <div class="navbar navbar-tshop navbar-fixed-top megamenu" role="navigation">
@@ -686,159 +688,102 @@
   </div>
   <!-- /.Fixed navbar  -->
 
+
     <div class="container main-container headerOffset">
         <div class="row">
             <div class="breadcrumbDiv col-lg-12">
                 <ul class="breadcrumb">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="category.html">{{currentProduct.parentCategory}}</a></li>
-                    <li class="active">{{currentProduct.productName}}</li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/account">My Account</a></li>
+                    <li class="active"> My Address</li>
                 </ul>
             </div>
         </div>
-        <div class="row transitionfx">
+        <!--/.row-->
 
-            <!-- left column -->
-            <div class="col-lg-6 col-md-6 col-sm-6">
-                <!-- product Image and Zoom -->
-                <div class="main-image sp-wrap col-lg-12 no-padding">
 
-                    <a href="images/productImages/{{currentProduct.productImage1}}"><img
-                            src="images/productImages/{{currentProduct.productImage1}}" class="img-responsive"
-                            alt="img"></a>
-                    <a href="images/productImages/{{currentProduct.productImage2}}"><img
-                            src="images/productImages/{{currentProduct.productImage2}}" class="img-responsive"
-                            alt="img"></a>
-                    <a href="images/productImages/{{currentProduct.productImage3}}"><img
-                            src="images/productImages/{{currentProduct.productImage3}}" class="img-responsive"
-                            alt="img"></a>
-                </div>
-            </div>
-            <!--/ left column end -->
+        <div class="row">
 
-            <!-- right column -->
+            <div class="col-lg-9 col-md-9 col-sm-7">
+                <h1 class="section-title-inner"><span><i class="fa fa-map-marker"></i> My addresses </span></h1>
 
-            <!-- productFilter -->
-            <div class="col-lg-6 col-md-6 col-sm-5">
-                <h1 class="product-title"> {{currentProduct.productName}}</h1>
+                <p>Please configure your default billing and delivery addresses when placing an order. You may also add
+                    additional addresses, which can be useful for sending gifts or receiving an order at your office.
+                </p>
 
-                <div class="product-price"><span class="price-sales"> ₹{{currentProduct.productPrice}}</span> <span
-                        class="price-standard">₹999</span>
-                </div>
+                <div class="row userInfo">
 
-                <!-- productFilter -->
+                    <div class="col-lg-12">
+                        <h2 class="block-title-2"> Your addresses are listed below. </h2>
 
-                <div class="cart-actions">
-                    <div class="addto row">
-                        <form action="/addToCart/{{currentProduct._id}}" method="POST">
-                            <div class="col-lg-4 col-sm-4 col-xs-4">
-                                <div class="filterBox">
-                                    <label for="qty">Quantity</label>
-                                    <select id="qty" class="form-control" name="productQuantity">
-                                        <option value=1>1</option>
-                                        <option value=2>2</option>
-                                        <option value=3>3</option>
-                                        <option value=4>4</option>
-                                        <option value=5>5</option>
-                                        <option value=6>6</option>
-                                        <option value=7>7</option>
-                                        <option value=8>8</option>
-                                        <option value=9>9</option>
-                                        <option value=10>10</option>
-                                    </select>
+                        <p> Be sure to update your personal information if it has changed.</p>
+                    </div>
+
+                    <div class="w100 clearfix">
+                        {{#each addressData}}
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title"><strong>{{this.addressTitle}}</strong></h3>
+                                </div>
+                                <div class="panel-body">
+                                    <ul>
+                                        <li><span class="address-name"> <strong>{{this.firstName}}
+                                                    {{this.lastName}}</strong></span></li>
+                                        <li><span class="address-line1">{{this.addressLine1}}</span></li>
+                                        <li><span class="address-line2">{{this.addressLine2}}</span></li>
+                                        <li><span> <strong>Mobile</strong> : {{this.phone}}</span></li>
+                                    </ul>
+                                </div>
+                                <div class="panel-footer panel-footer-address"><a
+                                        href="/account/editAddress/{{this._id}}" class="btn btn-sm btn-success"> <i
+                                            class="fa fa-edit"> </i> Edit </a>
+                                    <a class="btn btn-sm btn-danger" onclick="return confirm('Do you want to delete?')" href="/account/deleteAddress/{{this._id}}"> <i
+                                            class="fa fa-minus-circle"></i>
+                                        Delete </a>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                                <button type="submit" onclick="addedToCartSwal()"
-                                    class="button btn-block btn-cart cart first" title="Add to Cart" type="button">
-                                    Add to Cart
-                                </button>
-                            </div>
-                        </form>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"><a
-                                class="link-wishlist wishlist btn-block ">Add
-                                to Wishlist</a></div>
+                        </div>
+                        {{/each}}
                     </div>
-                    <div style="clear:both"></div>
-                    <h3 class="incaps"><i class="fa fa fa-check-circle-o color-in"></i> In stock</h3>
+                    <!--/.w100-->
 
-                    <h3 style="display:none" class="incaps"><i class="fa fa-minus-circle color-out"></i> Out of stock
-                    </h3>
+                    <div class="col-lg-12 clearfix">
+                        <a class="btn   btn-primary" href="/account/addAddress"><i class="fa fa-plus-circle"></i> Add
+                            New
+                            Address </a>
+                    </div>
 
-                    <h3 class="incaps"><i class="glyphicon glyphicon-lock"></i> Secure online ordering</h3>
+                    <div class="col-lg-12 clearfix">
+                        <ul class="pager">
+                            <li class="previous pull-right"><a href="/"> <i class="fa fa-home"></i> Go to Shop
+                                </a>
+                            </li>
+                            <li class="next pull-left"><a href="/account">&larr; Back to My Account</a></li>
+                        </ul>
+                    </div>
+
                 </div>
-
+                <!--/row end-->
             </div>
-            <!--/ right column end -->
+
+            <div class="col-lg-3 col-md-3 col-sm-5"></div>
 
         </div>
+        <!--/row-->
+
+        <div style="clear:both"></div>
     </div>
-    <!-- /main-container -->
+    <!-- /.main-container -->
 
-    <!-- Modal review start -->
-    <div class="modal  fade" id="modal-review" tabindex="-1" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true"> &times; </button>
-                    <h3 class="modal-title-site text-center">PRODUCT REVIEW </h3>
-                </div>
-                <div class="modal-body">
-
-                    <h3 class="reviewtitle uppercase">You're reviewing: Lorem ipsum dolor sit amet</h3>
-
-                    <form>
-                        <div class="form-group">
-                            <label>
-                                How do you rate this product? </label> <br>
-
-                            <div class="rating-here">
-                                <input type="hidden" class="rating-tooltip-manual" data-filled="fa fa-star fa-2x"
-                                    data-empty="fa fa-star-o fa-2x" data-fractions="3" />
-
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="rtext">Name</label>
-                            <input type="text" class="form-control" id="rtext" placeholder="Your name" required>
-                        </div>
-
-                        <div class="form-group ">
-                            <label>Review</label>
-                            <textarea class="form-control" rows="3" placeholder="Your Review" required></textarea>
-
-                        </div>
-
-
-                        <button type="submit" class="btn btn-success">Submit Review</button>
-                    </form>
-
-
-                </div>
-
-            </div>
-            <!-- /.modal-content -->
-
-        </div>
-        <!-- /.modal-dialog -->
-
-    </div>
-    <!-- /.Modal review -->
+    <div class="gap"></div>
 
     <!-- Le javascript
 ================================================== -->
 
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="assets/js/jquery/jquery-2.1.3.min.js"></script>
-    <!-- jquery-migrate only for product details -->
-    <script src="../../../../code.jquery.com/jquery-migrate-1.2.1.js"></script>
-
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <!-- include jqueryCycle plugin -->
-    <script src="assets/js/jquery.cycle2.min.js"></script>
-    <!-- include easing plugin -->
-    <script src="assets/js/jquery.easing.1.3.js"></script>
-
     <!-- include  parallax plugin -->
     <script type="text/javascript" src="assets/js/jquery.parallax-1.1.js"></script>
 
@@ -859,16 +804,6 @@
     <!-- include carousel slider plugin  -->
     <script src="assets/js/owl.carousel.min.js"></script>
 
-    <!-- include smoothproducts // product zoom plugin  -->
-    <script type="text/javascript" src="assets/plugins/smoothproducts-master/js/smoothproducts.min.js"></script>
-
-    <script type="text/javascript">
-        /* wait for images to load */
-        $(window).load(function () {
-            $('.sp-wrap').smoothproducts();
-        });
-    </script>
-
     <!-- jQuery select2 // custom select   -->
     <script src="../../../../cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
 
@@ -878,52 +813,37 @@
     <!-- include custom script for site  -->
     <script src="assets/js/script.js"></script>
 
-
-    <script src="assets/plugins/rating/bootstrap-rating.min.js"></script>
-    <script>
-        $(function () {
-
-            $('.rating-tooltip-manual').rating({
-                extendSymbol: function () {
-                    var title;
-                    $(this).tooltip({
-                        container: 'body',
-                        placement: 'bottom',
-                        trigger: 'manual',
-                        title: function () {
-                            return title;
-                        }
-                    });
-                    $(this).on('rating.rateenter', function (e, rate) {
-                        title = rate;
-                        $(this).tooltip('show');
-                    })
-                        .on('rating.rateleave', function () {
-                            $(this).tooltip('hide');
-                        });
-                }
-            });
-
-        });
-    </script>
-
-    {{!-- swal --}}
+    {{!-- sweetalert --}}
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
     <script>
-        addedToCartSwal = () => {
+        {{!-- deleteSwal = (id) => { --}}
             Swal.fire({
-                position: "top-end",
-                icon: "success",
-                title: "Your work has been saved",
-                showConfirmButton: false,
-                timer: 750
+                title: "Are you sure?",
+                text: "You won't be able to revert this!",
+                icon: "warning",
+                showCancelButton: true,
+                confirmButtonColor: "#3085d6",
+                cancelButtonColor: "#d33",
+                confirmButtonText: "Yes, delete it!"
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    fetch("/account/deleteAddress/"+id, {
+                        method: "POST",
+                        headers: {"Content-type": "application/json; charset=UTF-8"}
+                    });
+                    Swal.fire({
+                        title: "Deleted!",
+                        text: "Your file has been deleted.",
+                        icon: "success"
+                    });
+                }
             });
         }
     </script>
 
+
 </body>
 
-<!-- Mirrored from templatecycle.com/tshop/v6/gray/product-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 09 Dec 2023 06:52:50 GMT -->
+<!-- Mirrored from templatecycle.com/tshop/v6/gray/my-address.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 09 Dec 2023 06:55:47 GMT -->
 
 </html>
