--- a/views/userViews/cart.hbs
+++ b/views/userViews/cart.hbs
@@ -721,9 +721,10 @@
                         <div class="price"><span>₹{{this.productId.productPrice}}</span></div>
                       </div>
                     </td>
+                    <div class="d-none">{{this.productStock}}</div>
                     <td class="delete"><a title="Delete" href="/cart/delete/{{this._id}}" onclick="return confirm('Are you sure you want to delete {{this.productId.productName}}')"> <i class="glyphicon glyphicon-trash fa-2x"></i></a></td>
                     {{!-- <td><input class="quanitySniper" type="number" value="{{this.productQuantity}}" min=1 max=10 name="quanitySniper" readonly></td> --}}
-                    <td>{{this.productQuantity}}</td>
+                    <td><button type="button" class="btn btn-danger btn-sm" onclick="cartDec()">-</button> 	&nbsp;	&nbsp; {{this.productQuantity}}	&nbsp; 	&nbsp; <button type="button" class="btn btn-primary btn-sm">+</button></td>
                     {{!-- <td><button id="dec" onclick="dec()">-</button><input id="qty" type="number" value="{{this.productQuantity}}" min=1 max=10 readonly style="width:35%"><button>+</button></td> --}}
                     {{!-- <td><input type="number" value={{this.productQuantity}} min="1" max="1000"></td> --}}
                     <td class="price">₹{{this.productId.productPrice}}</td>
@@ -843,10 +844,6 @@
 
   {{!-- decrease cart qty --}}
   <script>
-    function dec(){
-      qty.innerHTML= 
-      console.log('reduced')
-    }
 
   </script>
 
