--- a/views/userViews/landingPage.hbs
+++ b/views/userViews/landingPage.hbs
@@ -935,14 +935,14 @@
                 <div class="box-text-cell-inner dark">
                   <h1 class="uppercase">{{this.categoryDescription}}</h1>
                   <hr class="submini" />
-                  <a class="btn btn-inverse">SHOP NOW</a>
+                  <a href="/shop" class="btn btn-inverse">SHOP NOW</a>
                 </div>
               </div>
             </div>
           </div>
           <!--/.box-content-overly -->
           <div class="img-title">{{this.categoryName}}</div>
-          <a class="img-block" href="#">
+          <a class="img-block" href="/shop">
             <svg width="500" height="250">
               <rect style="fill:#000000" width="500" height="250" x="0" y="0" />
             </svg>
