--- a/views/userViews/cart.hbs
+++ b/views/userViews/cart.hbs
@@ -177,8 +177,8 @@
 
 
                 <li class="dropdown hasUserMenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                    aria-expanded="false"> <i class="glyphicon glyphicon-log-in hide visible-xs "></i> Hi, {{currentUser.username}} <b
-                      class="caret"></b></a>
+                    aria-expanded="false"> <i class="glyphicon glyphicon-log-in hide visible-xs "></i> Hi,
+                    {{currentUser.username}} <b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="/account"> <i class="fa fa-user"></i> Account</a></li>
                     <li><a href="account.html"><i class="fa fa fa-cog"></i> Profile</a></li>
@@ -189,7 +189,10 @@
                         My wishlists
                       </a></li>
                     <li class="divider"></li>
-                    <li><form action="/logout" method="POST"><i class="fa  fa-sign-out"></i><button type="submit">Log Out</button></form></li>
+                    <li>
+                      <form action="/logout" method="POST"><i class="fa  fa-sign-out"></i><button type="submit">Log
+                          Out</button></form>
+                    </li>
                   </ul>
                 </li>
 
@@ -712,7 +715,8 @@
                   {{#each userCartData}}
                   <tr class="CartProduct">
                     <td class="CartProductThumb">
-                      <div><a href="product-details.html"><img src="images/productImages/{{this.productId.productImage1}}" alt="img"></a>
+                      <div><a href="product-details.html"><img
+                            src="images/productImages/{{this.productId.productImage1}}" alt="img"></a>
                       </div>
                     </td>
                     <td>
@@ -721,13 +725,21 @@
                         <div class="price"><span>₹{{this.productId.productPrice}}</span></div>
                       </div>
                     </td>
-                    <div class="d-none">{{this.productStock}}</div>
-                    <td class="delete"><a title="Delete" href="/cart/delete/{{this._id}}" onclick="return confirm('Are you sure you want to delete {{this.productId.productName}}')"> <i class="glyphicon glyphicon-trash fa-2x"></i></a></td>
-                    {{!-- <td><input class="quanitySniper" type="number" value="{{this.productQuantity}}" min=1 max=10 name="quanitySniper" readonly></td> --}}
-                    <td><button type="button" class="btn btn-danger btn-sm" onclick="cartDec()">-</button> 	&nbsp;	&nbsp; {{this.productQuantity}}	&nbsp; 	&nbsp; <button type="button" class="btn btn-primary btn-sm">+</button></td>
-                    {{!-- <td><button id="dec" onclick="dec()">-</button><input id="qty" type="number" value="{{this.productQuantity}}" min=1 max=10 readonly style="width:35%"><button>+</button></td> --}}
+                    <div id="stockLimit" class="d-none">{{this.productStock}}</div>
+                    <td class="delete"><a title="Delete" href="/cart/delete/{{this._id}}"
+                        onclick="return confirm('Are you sure you want to delete {{this.productId.productName}}')"> <i
+                          class="glyphicon glyphicon-trash fa-2x"></i></a></td>
+                    {{!-- <td><input class="quanitySniper" type="number" value="{{this.productQuantity}}" min=1 max=10
+                        name="quanitySniper" readonly></td> --}}
+                    <td><button type="button" class="btn btn-danger btn-sm"
+                        onclick="cartDec('{{this._id}}')">-</button><span id="productQty"> &nbsp; &nbsp;
+                        {{this.productQuantity}} &nbsp; &nbsp; </span> <button type="button"
+                        class="btn btn-primary btn-sm" onclick="cartInc('{{this._id}}')">+</button></td>
+                    {{!-- <td><button id="dec" onclick="dec()">-</button><input id="qty" type="number"
+                        value="{{this.productQuantity}}" min=1 max=10 readonly style="width:35%"><button>+</button></td>
+                    --}}
                     {{!-- <td><input type="number" value={{this.productQuantity}} min="1" max="1000"></td> --}}
-                    <td class="price">₹{{this.productId.productPrice}}</td>
+                    <td id="productPrice" class="price">₹{{this.productId.productPrice}}</td>
                   </tr>
                   {{/each}}
                 </tbody>
@@ -765,7 +777,7 @@
                   <tbody>
                     <tr>
                       <td>Total Price</td>
-                      <td class="price">₹{{grandTotal}}</td>
+                      <td id="totalPrice" class="price">₹{{grandTotal}}</td>
                     </tr>
                     <tr style="">
                       <td>Shipping</td>
@@ -777,7 +789,7 @@
                     </tr>
                     <tr>
                       <td>Grand Total</td>
-                      <td class=" site-color" id="total-price">₹{{grandTotal}}</td>
+                      <td id="grandTotal" class=" site-color" id="total-price">₹{{grandTotal}}</td>
                     </tr>
                     <tr>
                       <td colspan="2">
@@ -844,6 +856,34 @@
 
   {{!-- decrease cart qty --}}
   <script>
+    async function cartDec(id) {
+      try {
+        const response = await fetch('/cart/decQty/' + id, { method: 'PUT' })
+        let data = await response.json()
+        console.log('from hereee', data)
+        productQty.innerHTML = data.cartProduct.productQuantity //product qty table data
+        productPrice.innerHTML = data.cartProduct.totaCostPerProduct
+        totalPrice.innerHTML= data.grandTotal
+        grandTotal.innerHTML= data.grandTotal
+
+      } catch (error) {
+        console.error(error)
+      }
+    }
+
+    async function cartInc(id) {
+      try {
+        const response = await fetch('/cart/incQty/' + id, { method: 'PUT' })
+        let data = await response.json()
+        console.log('from hereee', data.productQuantity)
+        productQty.innerHTML = data.cartProduct.productQuantity //product qty table data
+        productPrice.innerHTML = data.cartProduct.totaCostPerProduct
+        totalPrice.innerHTML= data.grandTotal
+        grandTotal.innerHTML= data.grandTotal
+      } catch (error) {
+        console.error(error)
+      }
+    }
 
   </script>
 
